// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditName conponent renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "marginRight": 8,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View
            className="icon-wrapper"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="#7843DD"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={4286071773}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M16,6a1,1,0,0,0-1-1H3A1,1,0,0,0,3,7H8V18a1,1,0,0,0,2,0V7h5A1,1,0,0,0,16,6Zm5,5H15a1,1,0,0,0,0,2h2v5a1,1,0,0,0,2,0V13h2a1,1,0,0,0,0-2Z"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
    >
      Name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginVertical": 4,
        },
        Object {},
      ]
    }
    testID="text_input"
  >
    <RCTSinglelineTextInputView
      accessible={true}
      activeOutlineColor="#7843DD"
      allowFontScaling={true}
      blurOnSubmit={true}
      dense={true}
      error={false}
      focusable={true}
      forwardedRef={null}
      maxLength={100}
      mode="outlined"
      mostRecentEventCount={0}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onScroll={[Function]}
      onSelectionChange={[Function]}
      onSelectionChangeShouldSetResponder={[Function]}
      onStartShouldSetResponder={[Function]}
      outlineColor="#B2BDCD"
      placeholderTextColor="#627286"
      rejectResponderTermination={true}
      selection={null}
      selectionColor="#627286"
      style={Object {}}
      testID="edit_name.text_input"
      text="Test Name"
      theme={
        Object {
          "colors": Object {
            "background": "#FFFFFF",
            "placeholder": "#627286",
            "primary": "#B2BDCD",
            "text": "#2F3945",
          },
          "fonts": Object {
            "regular": Object {
              "fontFamily": "OpenSans-Regular",
            },
          },
          "roundness": 6,
        }
      }
      underlineColorAndroid="transparent"
      value="Test Name"
    />
  </View>
</View>
`;

exports[`EditName conponent should show helperContent when error=true 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "marginRight": 8,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View
            className="icon-wrapper"
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={24}
              bbWidth={24}
              fill="#7843DD"
              focusable={false}
              height={24}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={24}
            >
              <RNSVGGroup
                fill={4286071773}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M16,6a1,1,0,0,0-1-1H3A1,1,0,0,0,3,7H8V18a1,1,0,0,0,2,0V7h5A1,1,0,0,0,16,6Zm5,5H15a1,1,0,0,0,0,2h2v5a1,1,0,0,0,2,0V13h2a1,1,0,0,0,0-2Z"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 16,
          },
          Object {},
          undefined,
        ]
      }
    >
      Name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginVertical": 4,
        },
        Object {},
      ]
    }
    testID="text_input"
  >
    <RCTSinglelineTextInputView
      accessible={true}
      activeOutlineColor="#7843DD"
      allowFontScaling={true}
      blurOnSubmit={true}
      dense={true}
      error={true}
      focusable={true}
      forwardedRef={null}
      maxLength={100}
      mode="outlined"
      mostRecentEventCount={0}
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onScroll={[Function]}
      onSelectionChange={[Function]}
      onSelectionChangeShouldSetResponder={[Function]}
      onStartShouldSetResponder={[Function]}
      outlineColor="#B2BDCD"
      placeholderTextColor="#627286"
      rejectResponderTermination={true}
      selection={null}
      selectionColor="#627286"
      style={Object {}}
      testID="edit_name.text_input"
      text="Test Name"
      theme={
        Object {
          "colors": Object {
            "background": "#FFFFFF",
            "placeholder": "#627286",
            "primary": "#B2BDCD",
            "text": "#DD2C3E",
          },
          "fonts": Object {
            "regular": Object {
              "fontFamily": "OpenSans-Regular",
            },
          },
          "roundness": 6,
        }
      }
      underlineColorAndroid="transparent"
      value="Test Name"
    />
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-Regular",
            "fontSize": 12,
          },
          Object {
            "color": "#DD2C3E",
          },
          undefined,
        ]
      }
      testID="text_input.text_helper"
    >
      Name must not be empty
    </Text>
  </View>
</View>
`;
